2010-01-29
	Added DEFINEKEY command

2009-11-27
	Implemented TTY widget

2009-11-06
	final fix for matrix inverse bug

2009-09-04
	0.10.5 for windows released

2009-08-23
	Fix for desktop icon display (ALT+Tab) under X11 (ubuntu)

2009-08-14
	Fix for sub/func navigation tool to internally use line numbers in lieu of
	label searching.

2009-08-08
	Reworked editor toobar so there is now a command selection and only one text
	input field.

2009-08-02
	Updated calc.bas to work with the new DOFORM api
	Fixes for the FLTK DOFORM API to allow the updated calc.bas to work reliably

2009-07-28
	Implemented editor colour selection in FLTK build.

2009-07-26
	Implemented editor font selection in FLTK build. Fixed memoryTest.bas sample

2009-07-22
	Implemented "ELSE IF" syntax

2009-07-11
	fltk - file widget displays sorted items

2009-06-29
	update variables to use 64 bits
	fix for matrix inverse bug

2009-06-13
	updated form API in fltk version

2009-04-13
	incorporate agg into fltk version (reverted for now)

2009-01-14
	in osd_getpixel() for X11, offset x/y as getPixel is relative to the outer window
	FileWidget allow input of a custom path

2009-01-07
	Updated FileWidget to allow relative paths for saveas. Updated to handle
	readonly edit buffers. Fixed a few compiler warnings

2008-11-26
	FLTK 0.10.2 was released

2008-11-23
	FLTK: Fix for possible crash with html command used in plain window mode. Fix for
	file widget for directory names with space characters.

2008-11-16
	FLTK: Fix for invalid values returned by PEN command.

2008-10-26
	FLTK: Fixed a few problems with find and replace. Implemented Rename Word command.

2008-08-16
	* released windows version 0.10.1

2008-08-01
	* passing length < 0 to MID no longer causes stackdump

2008-07-17
	* refactor FLTK to allow opening of multiple editors

2008-07-05
	* cleanup ansi codes from output in dev_null driver. fixed logprint command
	* fixed "open for append"