@@ -1,3 +1,6 @@
+2010-02-05
+	Updated the editor code browser
+	
 2010-01-29
 	Added DEFINEKEY command
 
